examples/compiler_errors/exposing/ExposingTarget.flx
// skip: support or non-error companion fixture for compiler diagnostics

module ExposingTarget {
    public fn greet(name: String) -> String {
        "Hello, " + name
    }

    fn secret() -> Int {
        42
    }
}
